// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Policy Resolver Correctly Resolves Create Policy Mutation 1`] = `
Object {
  "data": Object {
    "createPolicy": Array [
      Object {
        "apiVersion": "policy.mcm.ibm.com/v1alpha1",
        "kind": "Policy",
        "metadata": Object {
          "creationTimestamp": "2018-09-06T17:12:34Z",
          "generation": 1,
          "name": "test-policy",
          "namespace": "default",
          "resourceVersion": "4385854",
          "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/default/policies/test-policy",
          "uid": "0c388331-b1f8-11e8-9a12-005056a0d11b",
        },
        "spec": Object {
          "namespaces": Object {
            "exclude": Array [
              "kube*",
            ],
            "include": Array [
              "default",
            ],
          },
          "remediationAction": "enforce",
          "role-templates": Array [
            Object {
              "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
              "complianceType": "musthave",
              "kind": "RoleTemplate",
              "metadata": Object {
                "name": "test-role",
                "namespace": "",
              },
              "rules": Array [
                Object {
                  "PolicyRule": Object {
                    "apiGroups": Array [
                      "extensions",
                      "apps",
                    ],
                    "resources": Array [
                      "deployments",
                    ],
                    "verbs": Array [
                      "get",
                      "list",
                      "watch",
                      "delete",
                    ],
                  },
                  "complianceType": "musthave",
                },
                Object {
                  "PolicyRule": Object {
                    "apiGroups": Array [
                      "core",
                    ],
                    "resources": Array [
                      "pods",
                    ],
                    "verbs": Array [
                      "create",
                      "update",
                      "patch",
                    ],
                  },
                  "complianceType": "mustnothave",
                },
                Object {
                  "PolicyRule": Object {
                    "apiGroups": Array [
                      "core",
                    ],
                    "resources": Array [
                      "secrets",
                    ],
                    "verbs": Array [
                      "get",
                      "watch",
                      "list",
                      "create",
                      "delete",
                      "update",
                      "patch",
                    ],
                  },
                },
              ],
              "selector": Object {
                "matchLabels": Object {
                  "cloud": "IBM",
                },
              },
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`Policy Resolver Correctly Resolves Delete Policy Mutation 1`] = `
Object {
  "data": Object {
    "deletePolicy": "test-policy",
  },
}
`;

exports[`Policy Resolver Correctly Resolves Policy List Query 1`] = `
Object {
  "data": Object {
    "policies": Array [
      Object {
        "enforcement": "inform",
        "metadata": Object {
          "creationTimestamp": "2018-09-04T16:13:50Z",
          "name": "policy-xz-1",
          "namespace": "mycluster",
          "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/mycluster/policies/policy-xz-1",
        },
        "status": "NonCompliant",
      },
      Object {
        "enforcement": "enforce",
        "metadata": Object {
          "creationTimestamp": "2018-09-04T16:13:50Z",
          "name": "policy-xz-2",
          "namespace": "mycluster",
          "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/mycluster/policies/policy-xz-2",
        },
        "status": "Compliant",
      },
    ],
  },
}
`;

exports[`Policy Resolver Correctly Resolves Single Policy Query 1`] = `
Object {
  "data": Object {
    "policies": Array [
      Object {
        "detail": Object {
          "exclude_namespace": Array [
            "kube*",
          ],
          "include_namespace": Array [
            "default",
          ],
        },
        "enforcement": "inform",
        "message": "-",
        "metadata": Object {
          "annotations": null,
          "creationTimestamp": "2018-09-04T16:13:50Z",
          "name": "policy-xz-1",
          "namespace": "mycluster",
          "resourceVersion": "4349995",
          "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/mycluster/policies/policy-xz-1",
          "uid": "82e00acc-b05d-11e8-9a12-005056a0d11b",
        },
        "objectTemplates": Array [],
        "raw": Object {
          "apiVersion": "policy.mcm.ibm.com/v1alpha1",
          "kind": "Policy",
          "metadata": Object {
            "creationTimestamp": "2018-09-04T16:13:50Z",
            "finalizers": Array [
              "finalizer.mcm.ibm.com",
            ],
            "generation": 1,
            "labels": Object {
              "compliance": "compliance-xz",
            },
            "name": "policy-xz-1",
            "namespace": "mycluster",
            "ownerReferences": Array [
              Object {
                "apiVersion": "compliance.mcm.ibm.com/v1alpha1",
                "blockOwnerDeletion": true,
                "controller": true,
                "kind": "Compliance",
                "name": "compliance-xz",
                "uid": "82de70e7-b05d-11e8-9a12-005056a0d11b",
              },
            ],
            "resourceVersion": "4349995",
            "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/mycluster/policies/policy-xz-1",
            "uid": "82e00acc-b05d-11e8-9a12-005056a0d11b",
          },
          "spec": Object {
            "complianceType": "",
            "namespaces": Object {
              "exclude": Array [
                "kube*",
              ],
              "include": Array [
                "default",
              ],
            },
            "remediationAction": "inform",
            "role-templates": Array [
              Object {
                "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                "complianceType": "musthave",
                "kind": "RoleTemplate",
                "metadata": Object {
                  "creationTimestamp": null,
                  "name": "role-xz-1",
                },
                "rules": Array [
                  Object {
                    "complianceType": "musthave",
                    "policyRule": Object {
                      "apiGroups": Array [
                        "extensions",
                        "apps",
                      ],
                      "resources": Array [
                        "deployments",
                      ],
                      "verbs": Array [
                        "get",
                        "list",
                        "watch",
                        "create",
                        "delete",
                        "patch",
                      ],
                    },
                  },
                ],
                "selector": Object {
                  "matchLabels": Object {
                    "cloud": "IBM",
                  },
                },
                "status": Object {
                  "Compliant": "NonCompliant",
                  "Validity": Object {
                    "valid": true,
                  },
                  "conditions": Array [
                    Object {
                      "lastTransitionTime": "2018-09-06T15:14:44Z",
                      "message": "k8s RBAC role is missing: role-xz-1",
                      "reason": "K8s RBAC role is missing",
                      "status": "True",
                      "type": "completed",
                    },
                  ],
                },
              },
            ],
          },
          "status": Object {
            "Compliant": "NonCompliant",
            "Valid": true,
          },
        },
        "roleBindingTemplates": Array [],
        "roleTemplates": Array [
          Object {
            "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
            "complianceType": "musthave",
            "compliant": "NonCompliant",
            "lastTransition": "2018-09-06T15:14:44Z",
            "name": "role-xz-1",
            "raw": Object {
              "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
              "complianceType": "musthave",
              "kind": "RoleTemplate",
              "metadata": Object {
                "creationTimestamp": null,
                "name": "role-xz-1",
              },
              "rules": Array [
                Object {
                  "complianceType": "musthave",
                  "policyRule": Object {
                    "apiGroups": Array [
                      "extensions",
                      "apps",
                    ],
                    "resources": Array [
                      "deployments",
                    ],
                    "verbs": Array [
                      "get",
                      "list",
                      "watch",
                      "create",
                      "delete",
                      "patch",
                    ],
                  },
                },
              ],
              "selector": Object {
                "matchLabels": Object {
                  "cloud": "IBM",
                },
              },
              "status": Object {
                "Compliant": "NonCompliant",
                "Validity": Object {
                  "valid": true,
                },
                "conditions": Array [
                  Object {
                    "lastTransitionTime": "2018-09-06T15:14:44Z",
                    "message": "k8s RBAC role is missing: role-xz-1",
                    "reason": "K8s RBAC role is missing",
                    "status": "True",
                    "type": "completed",
                  },
                ],
              },
              "templateType": "role-templates",
            },
          },
        ],
        "rules": Array [
          Object {
            "apiGroups": Array [
              "extensions",
              "apps",
            ],
            "complianceType": "musthave",
            "resources": Array [
              "deployments",
            ],
            "ruleUID": "role-xz-1-rule-0",
            "templateType": "role-templates",
            "verbs": Array [
              "get",
              "list",
              "watch",
              "create",
              "delete",
              "patch",
            ],
          },
        ],
        "status": "NonCompliant",
        "violations": Array [
          Object {
            "cluster": "-",
            "message": "k8s RBAC role is missing: role-xz-1",
            "name": "role-xz-1",
            "reason": "K8s RBAC role is missing",
            "selector": Object {
              "matchLabels": Object {
                "cloud": "IBM",
              },
            },
            "status": "NonCompliant",
          },
        ],
      },
    ],
  },
}
`;
